Fixed issues with display of webpages on smaller devices.

--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@ html, body, #root {
 }
 
 .about {
-  height: 100%;
+  height: 87.5vh;
 }
 
 h1 {
@@ -84,12 +84,17 @@ h2 {
 }
 
 
+
 .full-background {
   background-color: rgba(117, 156, 201, 0.6);
-  height: 100%;
   padding-top: 5em;
   padding-bottom: 5em;
 }
+
+.projects-background {
+  height: auto;
+}
+
 
 .bracket {
   font-size: 10em;
